@@ -1,6 +1,7 @@
 package GeoHazardServices;
 
 import java.io.BufferedReader;
+import java.io.File;
 import java.io.IOException;
 import java.io.InputStreamReader;
 import java.io.PrintStream;
@@ -20,14 +21,18 @@ public class SshConnection {
 	public SshConnection( String user, String host, String dir ) throws IOException {
 		
 		this.ssh = "ssh " + user + "@" + host;
-		this.dir = dir;
+		this.dir = dir;		
 		connect();
 	}
 	
 	public void connect() throws IOException {
 		
-		System.out.println( ssh );
-		process = Runtime.getRuntime().exec( ssh );
+		File tmp = File.createTempFile("worker", "log");
+		System.out.println( ssh + " " + tmp.getAbsolutePath() );
+		ProcessBuilder pb = new ProcessBuilder( ssh.split(" ") );
+		pb.redirectError( tmp );
+		//process = Runtime.getRuntime().exec( ssh );
+		process = pb.start();
 		
 		out = new PrintStream( process.getOutputStream() );
 		in = new BufferedReader( new InputStreamReader( process.getInputStream() ) );
